--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
 
-    <!-- Header (Language button removed) -->
+    <!-- Header -->
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">ExpertStore</a>
+            <!-- This is now the single source of truth for navigation links -->
             <nav class="main-nav">
                 <a href="#home">Home</a>
                 <a href="#products">Products</a>
@@ -30,14 +31,9 @@
         </div>
     </header>
 
-    <!-- Mobile Navigation Menu -->
+    <!-- Mobile Navigation Menu (Now an empty container to be filled by JS) -->
     <div id="mobile-menu" class="mobile-menu">
-        <nav class="mobile-menu-links">
-            <a href="#home">Home</a>
-            <a href="#products">Products</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <nav class="mobile-menu-links"></nav>
     </div>
 
     <!-- Main Content -->
