--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">ExpertStore</a>
-            <!-- This is now the single source of truth for navigation links -->
             <nav class="main-nav">
                 <a href="#home">Home</a>
                 <a href="#products">Products</a>
@@ -31,9 +30,14 @@
         </div>
     </header>
 
-    <!-- Mobile Navigation Menu (Now an empty container to be filled by JS) -->
+    <!-- Mobile Navigation Menu -->
     <div id="mobile-menu" class="mobile-menu">
-        <nav class="mobile-menu-links"></nav>
+        <nav class="mobile-menu-links">
+            <a href="#home">Home</a>
+            <a href="#products">Products</a>
+            <a href="#about">About Us</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </div>
 
     <!-- Main Content -->
