--- a/product-anker-charger.html
+++ b/product-anker-charger.html
@@ -64,6 +64,10 @@
 
             <!-- Right Column: Details and Order Form (No changes needed here) -->
             <div class="product-details">
+                                <!-- NEW: Back to Products Button -->
+                <a href="index.html#products" class="back-to-products-btn">
+                    <span>←</span> Back to All Products
+                </a>
                 <h1 data-lang-key="productName">Anker 312 Charger (20W)</h1>
                 <p class="price">DA 1,900.00</p>
                 <div class="description">
