--- a/product-soundcore 3  Bluetooth Speaker with Stereo Sound.html
+++ b/product-soundcore 3  Bluetooth Speaker with Stereo Sound.html
@@ -64,6 +64,10 @@
 
             <!-- Right Column: Details and Order Form (No changes needed here) -->
             <div class="product-details">
+		                    <!-- NEW: Back to Products Button -->
+                <a href="index.html#products" class="back-to-products-btn">
+                    <span>←</span> Back to All Products
+                </a>
                 <h1 data-lang-key="productName">soundcore 3  Bluetooth Speaker with Stereo Sound</h1>
                 <p class="price">4,200.00 DA</p>
                 <div class="description">
