--- a/product-”X59 Victory” USB to Type-C Cable – Charging & Data Sync.html
+++ b/product-”X59 Victory” USB to Type-C Cable – Charging & Data Sync.html
@@ -64,6 +64,10 @@
 
             <!-- Right Column: Details and Order Form (No changes needed here) -->
             <div class="product-details">
+		                    <!-- NEW: Back to Products Button -->
+                <a href="index.html#products" class="back-to-products-btn">
+                    <span>←</span> Back to All Products
+                </a>
                 <h1 data-lang-key="productName">”X59 Victory” USB to Type-C Cable – Charging & Data Sync</h1>
                 <p class="price">1,500.00 DA</p>
                 <div class="description">
