--- a/product-HDMI 8K 2.1 Cable – Ultra High Speed, 60Hz, Ultra HD.html
+++ b/product-HDMI 8K 2.1 Cable – Ultra High Speed, 60Hz, Ultra HD.html
@@ -63,6 +63,10 @@
 
             <!-- Right Column: Details and Order Form (No changes needed here) -->
             <div class="product-details">
+                                <!-- NEW: Back to Products Button -->
+                <a href="index.html#products" class="back-to-products-btn">
+                    <span>←</span> Back to All Products
+                </a>
                 <h1 data-lang-key="productName">HDMI 8K 2.1 Cable – Ultra High Speed, 60Hz, Ultra HD</h1>
                 <p class="price">2,500.00 DA </p>
                 <div class="description">
