Update product-Anker MagGo Power Bank (10K, Slim).html

--- a/product-Anker MagGo Power Bank (10K, Slim).html
+++ b/product-Anker MagGo Power Bank (10K, Slim).html
@@ -63,6 +63,10 @@
 
             <!-- Right Column: Details and Order Form (No changes needed here) -->
             <div class="product-details">
+		                    <!-- NEW: Back to Products Button -->
+                <a href="index.html#products" class="back-to-products-btn">
+                    <span>←</span> Back to All Products
+                </a>
                 <h1 data-lang-key="productName">Anker MagGo Power Bank (10K, Slim)</h1>
                 <p class="price">3,500.00 DA</p>
                 <div class="description">
