--- a/product-2-in-1 Magnetic Charging Travel Pad with Qi2 15W.html
+++ b/product-2-in-1 Magnetic Charging Travel Pad with Qi2 15W.html
@@ -65,6 +65,10 @@
 
             <!-- Right Column: Details and Order Form (No changes needed here) -->
             <div class="product-details">
+		                    <!-- NEW: Back to Products Button -->
+                <a href="index.html#products" class="back-to-products-btn">
+                    <span>←</span> Back to All Products
+                </a>
                 <h1 data-lang-key="productName">2-in-1 Magnetic Charging Travel Pad with Qi2 15W</h1>
                 <p class="price">3,800.00 DA</p>
                 <div class="description">
