--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
             <div class="footer-content">
                 <div class="footer-column"><h3>About ExpertStore</h3><p>Your one-stop shop for high-quality electronics and accessories at the best prices.</p></div>
                 <div class="footer-column"><h3>Quick Links</h3><ul><li><a href="privacy-policy.html">Privacy Policy</a></li><li><a href="terms-of-service.html">Terms of Service</a></li><li><a href="return-policy.html">Return Policy</a></li></ul></div>
-                <div class="footer-column"><h3>Contact Us</h3><p>Email: contact@expertstore.com</p><p>Phone: +123 456 7890</p></div>
+                        <div class="social-links">
+            <a href="https://wa.me/message/WGLSISTQWPALO1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://t.me/SofianeKLM" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+        </div>
             </div>
             <div class="footer-bottom"><p>© 2025 ExpertStore. All Rights Reserved.</p></div>
         </div>
