--- a/return-policy.html
+++ b/return-policy.html
@@ -6,6 +6,7 @@
     <title data-lang-key="returnTitle">Return Policy - Expert Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -51,7 +52,7 @@
             <p data-lang-key="returnP2">To be eligible for a return, your item must be unused and in the same condition that you received it. It must also be in the original packaging. A receipt or proof of purchase is required.</p>
             
             <h2 data-lang-key="returnH2_3">3. How to Initiate a Return</h2>
-            <p data-lang-key="returnP3">To start a return, please contact us at contact@expertstore.com with your order number and reason for the return. We will provide you with instructions on how and where to send your package.</p>
+            <p data-lang-key="returnP3">To start a return, please <a href="index.html#contact">Contact Us</a> with your order number and reason for the return. We will provide you with instructions on how and where to send your package.</p>
             
             <h2 data-lang-key="returnH2_4">4. Refunds</h2>
             <p data-lang-key="returnP4">Once your return is received and inspected, we will send you an email to notify you that we have received your returned item. If your return is approved, then your refund will be processed, and a credit will automatically be applied to your original method of payment (or an alternative method will be arranged).</p>
@@ -67,8 +68,13 @@
             <div class="footer-content">
                 <div class="footer-column"><h3 data-lang-key="footerAbout">About ExpertStore</h3><p data-lang-key="footerAboutText">Your one-stop shop for high-quality electronics and accessories at the best prices.</p></div>
                 <div class="footer-column"><h3 data-lang-key="footerLinks">Quick Links</h3><ul><li><a href="privacy-policy.html" data-lang-key="footerLinkPrivacy">Privacy Policy</a></li><li><a href="terms-of-service.html" data-lang-key="footerLinkTos">Terms of Service</a></li><li><a href="return-policy.html" data-lang-key="footerLinkReturns">Return Policy</a></li></ul></div>
-                <div class="footer-column"><h3 data-lang-key="footerContact">Contact Us</h3><p>Email: contact@expertstore.com</p><p>Phone: +123 456 7890</p></div>
-            </div>
+<div class="footer-column">
+        <h3>Follow Us</h3>
+        <div class="social-links">
+            <a href="https://wa.me/message/WGLSISTQWPALO1" target="_blank" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://t.me/SofianeKLM" target="_blank" title="Telegram"><i class="fa-brands fa-telegram"></i></a>
+        </div>
+    </div>            </div>
             <div class="footer-bottom"><p data-lang-key="footerCopyright">© 2025 ExpertStore. All Rights Reserved.</p></div>
         </div>
     </footer>
