--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -6,6 +6,7 @@
     <title data-lang-key="termsTitle">Terms of Service - Expert Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -58,7 +59,7 @@
             <p data-lang-key="termsP5">These Terms of Service and any separate agreements whereby we provide you Services shall be governed by and construed in accordance with the laws of Algeria.</p>
             
             <h2 data-lang-key="termsH2_6">6. Contact Information</h2>
-            <p data-lang-key="termsP6">Questions about the Terms of Service should be sent to us at contact@expertstore.com.</p>
+            <p data-lang-key="termsP6">Questions about the Terms of Service should be sent to us vai our <a href="index.html#contact">Contact Us</a>.</p>
         </div>
     </main>
 
@@ -68,8 +69,13 @@
             <div class="footer-content">
                 <div class="footer-column"><h3 data-lang-key="footerAbout">About ExpertStore</h3><p data-lang-key="footerAboutText">Your one-stop shop for high-quality electronics and accessories at the best prices.</p></div>
                 <div class="footer-column"><h3 data-lang-key="footerLinks">Quick Links</h3><ul><li><a href="privacy-policy.html" data-lang-key="footerLinkPrivacy">Privacy Policy</a></li><li><a href="terms-of-service.html" data-lang-key="footerLinkTos">Terms of Service</a></li><li><a href="return-policy.html" data-lang-key="footerLinkReturns">Return Policy</a></li></ul></div>
-                <div class="footer-column"><h3 data-lang-key="footerContact">Contact Us</h3><p>Email: contact@expertstore.com</p><p>Phone: +123 456 7890</p></div>
-            </div>
+    <div class="footer-column">
+        <h3>Follow Us</h3>
+        <div class="social-links">
+            <a href="https://wa.me/message/WGLSISTQWPALO1" target="_blank" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://t.me/SofianeKLM" target="_blank" title="Telegram"><i class="fa-brands fa-telegram"></i></a>
+        </div>
+    </div>            </div>
             <div class="footer-bottom"><p data-lang-key="footerCopyright">© 2025 ExpertStore. All Rights Reserved.</p></div>
         </div>
     </footer>
