--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -144,17 +145,20 @@
 </section>
     </main>
 
-    <footer class="main-footer">
+    <!-- Footer (Consistent across all pages) -->
+    <footer id="contact" class="main-footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-column"><h3>About ExpertStore</h3><p>Your one-stop shop for high-quality electronics and accessories at the best prices.</p></div>
-                <div class="footer-column"><h3>Quick Links</h3><ul><li><a href="privacy-policy.html">Privacy Policy</a></li><li><a href="terms-of-service.html">Terms of Service</a></li><li><a href="return-policy.html">Return Policy</a></li></ul></div>
-                        <div class="social-links">
-            <a href="https://wa.me/message/WGLSISTQWPALO1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://t.me/SofianeKLM" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                <div class="footer-column"><h3 data-lang-key="footerAbout">About ExpertStore</h3><p data-lang-key="footerAboutText">Your one-stop shop for high-quality electronics and accessories at the best prices.</p></div>
+                <div class="footer-column"><h3 data-lang-key="footerLinks">Quick Links</h3><ul><li><a href="privacy-policy.html" data-lang-key="footerLinkPrivacy">Privacy Policy</a></li><li><a href="terms-of-service.html" data-lang-key="footerLinkTos">Terms of Service</a></li><li><a href="return-policy.html" data-lang-key="footerLinkReturns">Return Policy</a></li></ul></div>
+    <div class="footer-column">
+        <h3>Follow Us</h3>
+        <div class="social-links">
+            <a href="https://wa.me/message/WGLSISTQWPALO1" target="_blank" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://t.me/SofianeKLM" target="_blank" title="Telegram"><i class="fa-brands fa-telegram"></i></a>
         </div>
-            </div>
-            <div class="footer-bottom"><p>© 2025 ExpertStore. All Rights Reserved.</p></div>
+    </div>            </div>
+            <div class="footer-bottom"><p data-lang-key="footerCopyright">© 2025 ExpertStore. All Rights Reserved.</p></div>
         </div>
     </footer>
     
