--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -46,6 +46,9 @@
     <main>
         <div class="container policy-container">
             <h1 data-lang-key="privacyTitle">Privacy Policy</h1>
+                    <!-- NEW: Add this line below the title -->
+        <p id="effective-date" class="effective-date-style"></p>
+            
             <p data-lang-key="privacyIntro">This Privacy Policy describes how your personal information is collected, used, and shared when you visit or make a purchase from this website.</p>
             
             <h2 data-lang-key="privacyH2_1">Personal Information We Collect</h2>
