--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -42,7 +42,9 @@
     <main>
         <div class="container policy-container">
             <h1 data-lang-key="termsTitle">Terms of Service</h1>
-
+        <!-- NEW: Add this line below the title -->
+        <p id="effective-date" class="effective-date-style"></p>
+            
             <h2 data-lang-key="termsH2_1">1. Overview</h2>
             <p data-lang-key="termsP1">This website is operated by ExpertStore. By visiting our site and/or purchasing something from us, you engage in our “Service” and agree to be bound by the following terms and conditions.</p>
 
