--- a/return-policy.html
+++ b/return-policy.html
@@ -42,7 +42,9 @@
     <main>
         <div class="container policy-container">
             <h1 data-lang-key="returnTitle">Return Policy</h1>
-
+        <!-- NEW: Add this line below the title -->
+        <p id="effective-date" class="effective-date-style"></p>
+            
             <p data-lang-key="returnIntro">We want you to be completely satisfied with your purchase. If you are not happy with your product, you may be eligible to return it subject to the terms below.</p>
 
             <h2 data-lang-key="returnH2_1">1. Return Period</h2>
