Update product-2-in-1 Magnetic Charging Travel Pad with Qi2 15W.html

--- a/product-2-in-1 Magnetic Charging Travel Pad with Qi2 15W.html
+++ b/product-2-in-1 Magnetic Charging Travel Pad with Qi2 15W.html
@@ -77,7 +77,7 @@
                     <p data-lang-key="productDescription">Conveniently fast charge two devices simultaneously (iPhone, Apple Watch, or AirPods) using Qi2. Charge your MagSafe-compatible iPhone up to 15W in landscape mode to be StandBy ready for hands-free streaming, and your Apple Watch Series 7, 8, 9 and Ultra 1 and 2. Design is foldable and compact, making it perfect for travel. </p>
                     <h3 class="specifications-title" data-lang-key="specificationsTitle">Key Specifications</h3>
                     <ul>
-                        <li data-lang-key="specFeature1"><strong>Fast Wireless Charging:</strong> Charge your iPhone at up to 15W using Qi2† technology, and power up Apple Watch Series 7, 8, 9, Ultra 1, and Ultra 2 efficiently.</li>
+                        <li data-lang-key="specFeature1"><strong>Fast Wireless Charging:</strong> Charge your iPhone at up to 15W using Qi2 technology, and power up Apple Watch Series 7, 8, 9, Ultra 1, and Ultra 2 efficiently.</li>
                         <li data-lang-key="specFeature2"><strong>Dual Device Charging:</strong> Conveniently charge two devices at once — your iPhone, Apple Watch, or AirPods.</li>
                         <li data-lang-key="specFeature3"><strong>Qi2 and MagSafe Compatibility:</strong> Enjoy magnetic, adaptive charging with the latest Qi2 technology and full MagSafe compatibility.</li>
                         <li data-lang-key="specFeature4"><strong>Travel-Ready Design:</strong> Foldable, compact, and lightweight — perfect for on-the-go use or travel.</li>
